# rustandroidtotp

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/victorprokhorov/rustandroidtotp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/victorprokhorov/rustandroidtotp/: Bindings.java  MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/rustandroidtotp/: Cargo.toml
app/src/main/rustandroidtotp/src/: lib.rs
app/src/test/java/com/victorprokhorov/rustandroidtotp/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
