[package]
edition = "2021"
name = "rustandroidtotp"
version = "0.1.0"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
aes-gcm = { version = "0.10.3", features = ["heapless", "alloc"] }
android_logger = "0.13.3"
anyhow = { version = "1.0.86", features = ["backtrace"] }
base32 = "0.5.0"
data-encoding = "2.6.0"
jni = "0.21.1"
log = "0.4.21"
pbkdf2 = "0.12.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }
